--- a/lectures/reveal.js/theme/ttw.css
+++ b/lectures/reveal.js/theme/ttw.css
@@ -1,9 +1,12 @@
 /**
- * White theme for reveal.js. This is the opposite of the 'black' theme.
+ * Theme from me, TTW! :)
  *
  * By Hakim El Hattab, http://hakim.se
  */
 @import url(fonts/source-sans-pro/source-sans-pro.css);
+@import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Epilogue:ital,wght@0,400;1,300&display=swap');
+
 section.has-dark-background, section.has-dark-background h1, section.has-dark-background h2, section.has-dark-background h3, section.has-dark-background h4, section.has-dark-background h5, section.has-dark-background h6 {
   color: #fff; }
 
@@ -15,8 +18,20 @@ section.has-dark-background, section.has-dark-background h1, section.has-dark-ba
   font-size: 24px; /* hack for this exact list */
 }
 
+figcaption {
+  font-size: 14px;
+}
+
+#title-slide {
+  text-align: left;
+}
+
 #title-slide .title {
   margin-top: 300px;
+  border-left-width: 20px;
+  border-left-style: solid;
+  border-left-color: #3cb731;
+  padding-left: 12px;
 }
 
 #title-slide .logo {
@@ -24,17 +39,51 @@ section.has-dark-background, section.has-dark-background h1, section.has-dark-ba
   float: right;
 }
 
+#title-slide .module {
+  margin-bottom: 0px;
+}
+
+#title-slide .author {
+  display: inline;
+  float:left;
+  font-weight: bold;
+  margin-top: 0px;
+}
+
+#title-slide .date {
+  float: right;
+  font-weight: bold;
+  margin-top: 0px;
+}
+
+.reveal .slide {
+  text-align: left;
+}
+
+.reveal figure {
+  text-align: center;
+}
+
+.reveal .controls.helpbutton {
+  bottom: initial;
+  top: 90px;
+}
+
+.reveal li {
+  margin-bottom: 10px;
+}
+
 /*********************************************
  * GLOBAL STYLES
  *********************************************/
 :root {
   --background-color: #fff;
-  --main-font: Source Sans Pro, Helvetica, sans-serif;
+  --main-font: Raleway, sans-serif;
   --main-font-size: 42px;
   --main-color: #222;
   --block-margin: 20px;
   --heading-margin: 0 0 20px 0;
-  --heading-font: Source Sans Pro, Helvetica, sans-serif;
+  --heading-font: Epilogue, sans-serif;
   --heading-color: #222;
   --heading-line-height: 1.2;
   --heading-letter-spacing: normal;
@@ -57,7 +106,7 @@ section.has-dark-background, section.has-dark-background h1, section.has-dark-ba
   background-color: #fff; }
 
 .reveal {
-  font-family: "Source Sans Pro", Helvetica, sans-serif;
+  font-family: Raleway, Helvetica, sans-serif;
   font-size: 36px;
   font-weight: normal;
   color: #222; }
@@ -88,7 +137,7 @@ section.has-dark-background, section.has-dark-background h1, section.has-dark-ba
 .reveal h6 {
   margin: 0 0 20px 0;
   color: #222;
-  font-family: "Source Sans Pro", Helvetica, sans-serif;
+  font-family: Epilogue, Helvetica, sans-serif;
   font-weight: 600;
   line-height: 1.2;
   letter-spacing: normal;
@@ -100,6 +149,9 @@ section.has-dark-background, section.has-dark-background h1, section.has-dark-ba
   font-size: 2.5em; }
 
 .reveal h2 {
+  font-variant: small-caps;
+  text-transform: none;
+  border-bottom: 1px solid darkgrey;
   font-size: 1.6em; }
 
 .reveal h3 {
@@ -110,6 +162,19 @@ section.has-dark-background, section.has-dark-background h1, section.has-dark-ba
 
 .reveal h1 {
   text-shadow: none; }
+
+.reveal dl {
+  display: inline-block;
+  text-align: left;
+  margin-left: 1em;
+  margin-top: 0;
+  margin-bottom: 1em;
+  margin-right: 0;
+}
+
+.reveal dt::before {
+  content: "Definition: ";
+}
 
 /*********************************************
  * OTHER
@@ -133,7 +198,6 @@ section.has-dark-background, section.has-dark-background h1, section.has-dark-ba
   font-style: italic; }
 
 .reveal ol,
-.reveal dl,
 .reveal ul {
   display: inline-block;
   text-align: left;
@@ -143,10 +207,10 @@ section.has-dark-background, section.has-dark-background h1, section.has-dark-ba
   list-style-type: decimal; }
 
 .reveal ul {
-  list-style-type: disc; }
+  list-style-type: none; }
 
 .reveal ul ul {
-  list-style-type: square; }
+  list-style-type: disc; }
 
 .reveal ul ul ul {
   list-style-type: circle; }
@@ -156,9 +220,14 @@ section.has-dark-background, section.has-dark-background h1, section.has-dark-ba
 .reveal ol ol,
 .reveal ol ul {
   display: block;
-  margin-left: 40px; }
+  margin-left: 2em; }
 
 .reveal dt {
+  border-left-width: 7px;
+  border-left-style: solid;
+  border-left-color: #3cb731;
+
+  margin-top: 0.3em;
   font-weight: bold; }
 
 .reveal dd {
@@ -300,3 +369,5 @@ section.has-dark-background, section.has-dark-background h1, section.has-dark-ba
 @media print {
   .backgrounds {
     background-color: #fff; } }
+
+
