--- a/lectures/reveal.js/theme/ttw.css
+++ b/lectures/reveal.js/theme/ttw.css
@@ -266,6 +266,7 @@ figcaption {
   width: 70%;
   margin: 20px auto;
   padding: 5px;
+  font-size: 0.7em;
   font-style: italic;
   background: rgba(255, 255, 255, 0.05);
   box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.2); }
