--- a/lectures/reveal.js/theme/ttw.css
+++ b/lectures/reveal.js/theme/ttw.css
@@ -226,7 +226,7 @@ figcaption {
 
 .reveal ol,
 .reveal ul {
-  display: inline-block;
+  display: block;
   text-align: left;
   margin: 0 0 0 1em; }
 
